# Cyze

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json
design-handoff/: Cyze Brand Exploration.html
scripts/: build-sidecar.sh
src/: App.tsx  CeremonyListener.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: dkg.rs  events.rs  keystore.rs  lib.rs  signing.rs  transport.rs  wallet.rs  zcash.rs
src-tauri/core/tests/: ceremony_e2e.rs
src-tauri/src/: lib.rs  sidecar.rs  state.rs  tunnel.rs
src-tauri/src/commands/: contacts.rs  dkg.rs  groups.rs  keystore.rs  mod.rs  server.rs  signing.rs  wallet.rs
src-tauri/tests/: smoke.rs
src/ipc/: commands.ts
src/lib/: participants.ts
src/screens/: Contacts.tsx  Dashboard.tsx  DkgWizard.tsx  Groups.tsx  Inbox.tsx  NewSigningSession.tsx  ServerSettings.tsx  Unlock.tsx  Wallet.tsx
src/stores/: ceremonies.ts
