[workspace]
members = ["core"]
resolver = "2"

[workspace.dependencies]
frost-client = { git = "https://github.com/ZcashFoundation/frost-tools.git", rev = "3d2985cfbc5df9314f3882a6d693bbe0d711051f" }
frost-core = { version = "2.2.0", features = ["serde"] }
frost-ed25519 = { version = "2.0.0", features = ["serde"] }
frost-rerandomized = { version = "2.0.0-rc.0", features = ["serde"] }
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "ed49e9ca0699a6450f6d4a9fe62ff168f5ea1ead", features = ["frost"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
thiserror = "2"
zeroize = { version = "1.8", features = ["serde", "zeroize_derive"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
tokio-util = "0.7"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rcgen = "0.13"
postcard = "1.1"
bech32 = "0.11"
dirs = "5"
tracing = "0.1"
sha2 = "0.10"
base64 = "0.22"
