[package]
name = "frost-app-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
frost-client = { workspace = true }
frost-core = { workspace = true }
frost-ed25519 = { workspace = true }
frost-rerandomized = { workspace = true }
reddsa = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
bip39 = { workspace = true }
rcgen = { workspace = true }
postcard = { workspace = true }
bech32 = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
# Not used directly: pins the transitive xeddsa version for frost-client,
# which breaks against xeddsa 1.1 (rand_core trait changes).
xeddsa = "=1.0.2"

# Optional Zcash key/address derivation (spike). Behind a feature so the heavy
# orchard/halo2 dependency tree stays out of the default build.
orchard = { version = "0.14", optional = true }
zcash_address = { version = "0.12", optional = true }
pasta_curves = { version = "0.5", optional = true }
ff = { version = "0.13", optional = true }

# Wallet/light-client stack (feature `wallet`, spike 5.0). Heavy: pulls the
# zcash light-client backend, lightwalletd gRPC, PCZT builder, and sqlite.
zcash_client_backend = { version = "0.23", optional = true, default-features = false, features = [
    "orchard",
    "sync",
    "lightwalletd-tonic",
    "lightwalletd-tonic-transport",
    "lightwalletd-tonic-tls-webpki-roots",
    "pczt",
] }
zcash_client_sqlite = { version = "0.21", optional = true, features = ["orchard", "transparent-inputs", "unstable"] }
zcash_keys = { version = "0.14", optional = true, features = ["orchard"] }
zcash_protocol = { version = "0.9", optional = true }
tonic = { version = "0.14", optional = true, default-features = false, features = ["transport", "tls-webpki-roots"] }
rusqlite = { version = "0.37", optional = true }
prost = { version = "0.14", optional = true }
async-trait = { version = "0.1", optional = true }
zcash_primitives = { version = "0.28", optional = true }

[features]
# Orchard FVK / unified-address derivation from group key material.
zcash = ["dep:orchard", "dep:zcash_address", "dep:pasta_curves", "dep:ff", "dep:zcash_protocol"]
# Light-client wallet: sync, balances, and PCZT transaction building.
wallet = [
    "zcash",
    "dep:zcash_client_backend",
    "dep:zcash_client_sqlite",
    "dep:zcash_keys",
    "dep:zcash_protocol",
    "dep:tonic",
    "dep:rusqlite",
    "dep:prost",
    "dep:async-trait",
    "dep:zcash_primitives",
]

[dev-dependencies]
tempfile = "3"
